--- a/microservice-commandes.properties
+++ b/microservice-commandes.properties
@@ -1,7 +1,18 @@
+server.port=9001
+
 # H2 configuration
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
+
 # Define data.sql encoding
 spring.sql.init.encoding=utf-8
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=none
+
 # external configs
 my-config-ms.last-order=10
