chore: update microservice-commandes
Signed-off-by: MahmoudESSE <mahmoudessehayli@gmail.com>

--- a/microservice-commandes.properties
+++ b/microservice-commandes.properties
@@ -14,5 +14,7 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=none
 
+management.endpoints.web.expose=info,health,refresh
+
 # external configs
 my-config-ms.last-order=10
