--- a/microservice-commandes.properties
+++ b/microservice-commandes.properties
@@ -5,7 +5,7 @@ spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 
 # Define data.sql encoding
-spring.sql.init.encoding=utf-8
+spring.datasource.sql-script-encoding=UTF-8
 
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
