--- a/microservice-commandes.properties
+++ b/microservice-commandes.properties
@@ -8,11 +8,13 @@ spring.h2.console.enabled=true
 spring.datasource.sql-script-encoding=UTF-8
 
 spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=none
+
+#Actuator Configuration
+management.endpoints.web.exposure.include=info,refresh,health
 
 # external configs
 my-config-ms.last-order=10
