chore: update microservice-commandes
Signed-off-by: MahmoudESSE <mahmoudessehayli@gmail.com>

--- a/microservice-commandes.properties
+++ b/microservice-commandes.properties
@@ -14,7 +14,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=none
 
 #Actuator Configuration
-management.endpoints.web.exposure.include=info,refresh,health
+management.endpoints.web.exposure.include=*
 
 # external configs
 my-config-ms.last-order=20
