feat(eureka): add eureka url
Signed-off-by: MahmoudESSE <mahmoudessehayli@gmail.com>

--- a/microservice-commandes.properties
+++ b/microservice-commandes.properties
@@ -16,5 +16,8 @@ spring.jpa.hibernate.ddl-auto=none
 #Actuator Configuration
 management.endpoints.web.exposure.include=*
 
+# Eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:9102/eureka/
+
 # external configs
 my-config-ms.last-order=20
