feat(hystrix): add hystrix
Signed-off-by: MahmoudESSE <mahmoudessehayli@gmail.com>

--- a/microservice-produits.properties
+++ b/microservice-produits.properties
@@ -19,5 +19,5 @@ management.endpoints.web.exposure.include=*
 # Eureka
 eureka.client.serviceUrl.defaultZone=http://localhost:9102/eureka/
 
-# external configs
-my-config-ms.last-order=20
+# Hystrix dashboard management
+management.endpoints.web.exposure.include=hystrix.stream
