--- a/eureka-server.properties
+++ b/eureka-server.properties
@@ -9,3 +9,6 @@ spring.cloud.config.import-check.enabled=false
 #To avoid eureka server Connect to localhost:8761 timed out
 eureka.server.maxThreadsForPeerReplication=0
 management.endpoints.web.exposure.include=*
+
+# Hystrix dashboard management
+management.endpoints.web.exposure.include=hystrix.stream
