--- a/microservice-commandes.properties
+++ b/microservice-commandes.properties
@@ -19,5 +19,8 @@ management.endpoints.web.exposure.include=*
 # Eureka
 eureka.client.serviceUrl.defaultZone=http://localhost:9102/eureka/
 
+# Hystrix dashboard management
+management.endpoints.web.exposure.include=hystrix.stream
+
 # external configs
 my-config-ms.last-order=20
