--- a/zuul-server.properties
+++ b/zuul-server.properties
@@ -1,4 +1,14 @@
 server.port=9004
 
-# Eureka
 eureka.client.serviceUrl.defaultZone=http://localhost:9102/eureka/
+eureka.instance.preferIpAddress=true
+eureka.client.registerWithEureka=true
+
+spring.config.import=configserver:http://localhost:9101
+
+zuul.discovery.enabled=true
+zuul.routes.microservice-commandes.path=/microservice-commandes/**
+zuul.routes.microservice-commandes.serviceId=MICROSERVICE-COMMANDES
+
+logging.level.org.springframework.cloud.netflix.eureka=DEBUG
+logging.level.com.netflix.discovery=DEBUG
